@@ -1,7 +1,5 @@
 package uk.gov.hmcts.reform.juddata.camel.util;
 
-import org.apache.commons.lang3.StringUtils;
-
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -14,12 +12,12 @@ public class CommonUtils {
     }
 
     public static Timestamp getDateTimeStamp(String dateTime) {
-        if (StringUtils.isBlank(dateTime)) {
-            return null;
-        } else {
+
+        if (!dateTime.isBlank()) {
             LocalDateTime ldt = LocalDateTime.parse(dateTime,
                     DateTimeFormatter.ofPattern(DATE_TIME_FORMAT));
             return Timestamp.valueOf(ldt);
         }
+        return null;
     }
 }
